--- a/src/styles/loading-screen.css
+++ b/src/styles/loading-screen.css
@@ -40,7 +40,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgba(59, 51, 51, 0.103);
+    background: rgba(255, 255, 255, .2);
     display: flex;
     justify-content: center;
     align-items: center;
